# simple-crm

./: .dockerignore  .gitignore  BACKEND_SETUP.md  DESIGN_GUIDE.md  LICENSE  README.md  dev.bat  dev.env  dev.sh  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  crm.db  entrypoint.sh  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: a2b3c4d5e6f7_add_index_and_check_constraints.py  c769fd9e5252_initial_schema.py
backend/app/: auth.py  create_admin.py  database.py  email.py  encryption.py  logging_config.py  main.py  sanitize.py  seed_data.py  utils.py
backend/app/models/: models.py
backend/app/routers/: accounts.py  attachments.py  audit.py  auth.py  capture_notes.py  communications.py  compliance.py  contacts.py  contacts_followup.py  contracts.py  gmail.py  opportunities.py  proposals.py  sam_gov.py  teaming.py  timeline.py  users.py  vehicles.py
backend/app/schemas/: schemas.py
backend/app/services/: gmail_service.py  import_service.py  sam_gov.py
backend/tests/: conftest.py  test_accounts.py  test_attachments.py  test_audit.py  test_auth_endpoints.py  test_auth_utils.py  test_capture_notes.py  test_communications.py  test_compliance.py  test_contacts.py  test_contracts.py  test_database.py  test_email.py  test_encryption.py  test_followup.py  test_gmail.py  test_google_auth.py  test_logging_config.py  test_main.py  test_middleware.py  test_opportunities.py  test_proposals.py  test_sam_gov.py  test_sanitize.py  test_seed.py  test_teaming.py  test_timeline.py  test_users.py  test_vehicles.py
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/admin-guide/: configuration.md  docker-deployment.md  gmail-setup.md  google-auth-setup.md  installation.md  security.md  user-management.md
docs/src/developer-guide/: api-reference.md  architecture.md  authentication.md  backend.md  contributing.md  database.md  frontend.md  testing.md
docs/src/user-guide/: accounts.md  api-settings.md  compliance.md  contacts.md  contracts.md  dashboard.md  getting-started.md  gmail-integration.md  opportunities.md  teaming-proposals.md  vehicles.md
docs/theme/: custom.css
frontend/: .env.example  .env.local.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: backup.sh  dev.bat  dev.sh  pre-commit
src/: App.tsx  index.css
src/components/: ErrorBoundary.tsx  Layout.tsx  ProtectedRoute.tsx
src/contexts/: AuthContext.tsx
src/lib/: api.ts  localStorage.ts
src/pages/: ApiSettings.tsx  ContactDetail.tsx  ContactsList.tsx  ContractDetail.tsx  ContractsList.tsx  Dashboard.tsx  ForgotPassword.tsx  Login.tsx  ResetPassword.tsx  UserManagement.tsx
(+34 files in other folders)
